<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim_foreground"
    android:orientation="vertical"
    >
  <include layout="@layout/include_toolbar"/>

  <RelativeLayout
      android:id="@+id/rl_edtxt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:background="#ffffff"
      >

    <RelativeLayout
        android:id="@+id/rl_username"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="@dimen/view_margin_16"
        android:layout_marginRight="@dimen/view_margin_16"
        >

      <ImageView
          android:id="@+id/iv_username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginRight="10dip"
          android:src="@mipmap/icon_mobile"
          />

      <EditText
          android:id="@+id/et_login_username"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/iv_username"
          android:background="#00000000"
          android:hint="@string/user_name_number"
          android:inputType="number"
          android:singleLine="true"
          android:textColor="#565656"
          android:textSize="18sp"
          />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dip"
        android:layout_below="@id/rl_username"
        android:background="#bdbdbd"
        />

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/rl_username"
        android:layout_marginLeft="@dimen/view_margin_16"
        android:layout_marginRight="@dimen/view_margin_16"
        >

      <ImageView
          android:id="@+id/iv_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginRight="10dip"
          android:src="@mipmap/icon_password"
          />

      <EditText
          android:id="@+id/et_login_password"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/iv_password"
          android:background="#00000000"
          android:hint="@string/user_password"
          android:inputType="textPassword"
          android:singleLine="true"
          android:textColor="#565656"
          android:textSize="18sp"
          />
    </RelativeLayout>
  </RelativeLayout>

  <support.ui.components.SupportButton
      android:id="@+id/btn_login_login"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_marginTop="@dimen/activity_vertical_margin"
      android:gravity="center"
      android:text="@string/btn_login_login"
      android:textColor="@android:color/white"
      android:textSize="@dimen/text_size_18"
      android:layout_marginLeft="@dimen/activity_horizontal_margin"
      android:layout_marginRight="@dimen/activity_horizontal_margin"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      app:supportButtonCornerRadius="24dp"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/view_margin_20"
      android:paddingLeft="30dp"
      android:paddingRight="30dp"
      >
    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_login_register"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_14"
        style="?attr/borderlessButtonStyle"
        />
    <Button
        android:id="@+id/btn_login_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/btn_forget_password"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_14"
        style="?attr/borderlessButtonStyle"
        />

  </RelativeLayout>
</LinearLayout>